--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Nuxt.js build / generate output
 **/**/.nuxt
 **/**/dist
+
+# private tasks database
+todo/todos.json
