--- a/todo/package.json
+++ b/todo/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "inquirer": "^12.0.0"
+    "inquirer": "^12.0.0",
+    "lowdb": "^7.0.1"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7"
